--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,22 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>external.atlassian.jgitflow</groupId>
+				<artifactId>jgitflow-maven-plugin</artifactId>
+				<version>1.0-m5.1</version>
+				<configuration>
+					<enableSshAgent>true</enableSshAgent>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<allowUntracked>true</allowUntracked>
+
+					<flowInitContext>
+						<developBranchName>frank</developBranchName>
+						<versionTagPrefix/>
+						<releaseBranchPrefix>release-</releaseBranchPrefix>
+					</flowInitContext>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
