--- a/submodule-test/pom.xml
+++ b/submodule-test/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>demo-git-flow</artifactId>
         <groupId>com.shkaff</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
