--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.shkaff</groupId>
 	<artifactId>demo-git-flow</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<modules>
 		<module>submodule-test</module>
 	</modules>
